# PitchDek

./: .gitignore  .pre-commit-config.yaml  README.md  create_pdf.sh  environment.yml  setup.cfg  trucolpitchdeck.cls  zotero.bib
latex/: .gitignore  compile_script.sh  main.tex
latex/Appendices/: manual_appendices.tex  manual_appendices_from_root.tex  project_code_appendices.tex  project_code_appendices_from_root.tex
latex/Chapters/: 0_challenge.tex  1_solution.tex  2_market_opportunity.tex  4_market_strategy.tex  5_team.tex  6_impact.tex
latex/chapters/: 0_value_prop.tex  1_challenge.tex  2_market_opportunity.tex  3_competition.tex  3_solution.tex  4_revenue.tex  5_roadmap.tex
src/: get_template.sh  helper_dir_and_files.sh  ubuntu_prerequisites.sh
