[metadata]
name = pitchdeck
version = attr: pitchdeck.__version__
description = applies brain-adaptation mechanisms to spiking neural networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-t-0/pitchdeck
author = a-t-0
author_email = no-email@no-email.org
maintainer = a-t-0
maintainer_email = no-email@no-email.org
license = AGPLv3
license_file = licence
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
package_dir =
    =src
# Dependencies
install_requires =
    pyannotate>=1.2.0
    pytest-cov>=4.0.0
    typeguard>=2.13.3
python_requires = >=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pitchdeck = pitchdeck:main

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
